@@ -5,28 +5,39 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.soliscode</groupId>
+  <groupId>org.soliscode</groupId>
   <artifactId>soliscode</artifactId>
   <version>0.0.0-SNAPSHOT</version> <!-- placeholder; semantic-release overwrites -->
   <packaging>jar</packaging>
 
   <name>SolisCode Test</name>
-  <description>Library for writing unit tests</description>
-  <url>https://soliscode.com</url>
+  <description>Library for writing unit tests for classes that implement standard interfaces</description>
+  <url>https://soliscode.org</url>
   <inceptionYear>2025</inceptionYear>
+
+  <licenses>
+    <license>
+      <name>The Apache License, Version 2.0</name>
+      <url>https://www.apache.org/licenses/LICENSE.txt</url>
+    </license>
+  </licenses>
 
   <developers>
     <developer>
-      <id>ebergstrom</id>
+      <id>evanbergstrom</id>
       <name>Evan Bergstrom</name>
       <email>evan.bergstrom@icloud.com</email>
+      <organization>soliscode</organization>
       <url>http://www.evanbergstrom.com</url>
-      <roles>
-        <role>developer</role>
-      </roles>
       <timezone>America/New_York</timezone>
     </developer>
   </developers>
+
+  <scm>
+    <connection>scm:git@gitlab.com:soliscode/soliscode-test.git</connection>
+    <developerConnection>scm:git:ssh://git@gitlab.com:soliscode/soliscode-test.git</developerConnection>
+    <url>https://gitlab.com/soliscode/soliscode-test.git</url>
+  </scm>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -41,12 +52,8 @@
     <allowscript.javadoc.qualifier>--allow-script-in-comments</allowscript.javadoc.qualifier>
     <doclint.javadoc.qualifier>-Xdoclint:all</doclint.javadoc.qualifier>
 
-    <!-- compile dependency versions -->
-    <commons-lang3.version>3.13.0</commons-lang3.version>
-    <commons-math3.version>3.6.1</commons-math3.version>
-    <streamex.version>0.8.1</streamex.version>
 
-    <!-- test dependency versions -->
+    <!-- compile dependency versions -->
     <junit-platform.version>1.10.1</junit-platform.version>
     <junit-jupiter.version>5.10.1</junit-jupiter.version>
     <assertj-core.version>3.24.2</assertj-core.version>
@@ -54,10 +61,11 @@
 
     <!-- plugin versions -->
     <maven-toolchains-plugin.version>1.1</maven-toolchains-plugin.version>
+    <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
     <maven-clean-plugin.version>3.2.0</maven-clean-plugin.version>
     <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
     <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
-    <maven-surefire-plugin.version>3.0.0</maven-surefire-plugin.version>
+    <maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
     <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
     <maven-install-plugin.version>3.1.1</maven-install-plugin.version>
     <maven-site-plugin.version>3.12.1</maven-site-plugin.version>
@@ -65,10 +73,11 @@
     <maven-project-info-reports-plugin.version>3.4.5</maven-project-info-reports-plugin.version>
     <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
     <maven-javadoc-plugin.version>3.4.1</maven-javadoc-plugin.version>
+    <maven-gpg-plugin.version>3.2.4</maven-gpg-plugin.version>
     <maven-checkstyle-plugin.version>3.3.0</maven-checkstyle-plugin.version>
     <maven-jxr-plugin.version>3.3.0</maven-jxr-plugin.version>
-    <maven-surefire-junit5-tree-reporter.verison>1.2.1</maven-surefire-junit5-tree-reporter.verison>
-
+    <maven-surefire-junit5-tree-reporter.verison>1.4.0</maven-surefire-junit5-tree-reporter.verison>
+    <central-publishing-maven-plugin.version>0.8.0</central-publishing-maven-plugin.version>
     <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
     <mdoclet-plugin.version>3.1.0</mdoclet-plugin.version>
     <flexmark-all.version>0.64.8</flexmark-all.version>
@@ -85,19 +94,16 @@
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
       <version>${junit-jupiter.version}</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
       <version>${junit-jupiter.version}</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.junit.platform</groupId>
       <artifactId>junit-platform-testkit</artifactId>
       <version>${junit-platform.version}</version>
-      <scope>compile</scope>
     </dependency>
   </dependencies>
 
@@ -122,6 +128,16 @@
             </jdk>
           </toolchains>
         </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>${maven-source-plugin.version}</version>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <goals><goal>jar-no-fork</goal></goals>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <artifactId>maven-clean-plugin</artifactId>
@@ -218,6 +234,80 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>${maven-javadoc-plugin.version}</version>
+        <executions>
+          <execution>
+            <id>attach-javadocs</id>
+            <goals><goal>jar</goal></goals>
+          </execution>
+        </executions>
+        <configuration>
+          <defaultAuthor>Evan Bergstrom</defaultAuthor>
+          <defaultVersion>${project.version}</defaultVersion>
+          <version>true</version>
+          <author>true</author>
+          <quiet>true</quiet>
+          <name>Documentation</name>
+          <docfilessubdirs>true</docfilessubdirs>
+          <additionalJOptions>
+            <additionalJOption>-J--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</additionalJOption>
+            <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</additionalJOption>
+          </additionalJOptions>
+          <additionalOptions>-stylesheetfile ${javaDocStylesheetPath} ${doclint.javadoc.qualifier} ${allowscript.javadoc.qualifier} -header '&lt;script src="https://polyfill.io/v3/polyfill.min.js?features=es6"&gt;&lt;/script&gt;&lt;script type="text/javascript" async src="${math.mathjax.url}"&gt;&lt;/script&gt;'</additionalOptions>
+          <tags>
+            <tag>
+              <name>apiNote</name>
+              <placement>a</placement>
+              <head>API Note:</head>
+            </tag>
+            <tag>
+              <name>implSpec</name>
+              <placement>a</placement>
+              <head>Implementation Requirements:</head>
+            </tag>
+            <tag>
+              <name>implNote</name>
+              <placement>a</placement>
+              <head>Implementation Note:</head>
+            </tag>
+            <tag>
+              <name>complexity</name>
+              <placement>m</placement>
+              <head>Complexity:</head>
+            </tag>
+          </tags>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-gpg-plugin</artifactId>
+        <version>${maven-gpg-plugin.version}</version>
+        <executions>
+          <execution>
+            <id>sign</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>sign</goal>
+            </goals>
+            <configuration>
+              <gpgArguments>
+                <arg>--pinentry-mode</arg>
+                <arg>loopback</arg>
+              </gpgArguments>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.sonatype.central</groupId>
+        <artifactId>central-publishing-maven-plugin</artifactId>
+        <version>${central-publishing-maven-plugin.version}</version>
+        <extensions>true</extensions>
+        <configuration>
+          <publishingServerId>central</publishingServerId>
+          <!-- optional: make CI fully hands-free -->
+          <autoPublish>true</autoPublish>
+          <waitUntil>published</waitUntil>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.jacoco</groupId>
@@ -303,20 +393,6 @@
             </tag>
           </tags>
         </configuration>
-        <reportSets>
-          <reportSet>
-            <reports>
-              <report>javadoc</report>
-            </reports>
-          </reportSet>
-          <reportSet>
-            <id>aggregate</id>
-            <inherited>false</inherited>
-            <reports>
-              <report>aggregate</report>
-            </reports>
-          </reportSet>
-        </reportSets>
       </plugin>
       <plugin>
           <groupId>org.apache.maven.plugins</groupId>
